epiar_resources_artdir = $(datadir)/epiar/Resources/Art/
epiar_resources_art_DATA = Resources/Art/EpiarFleetbig.png Resources/Art/gatescene.png Resources/Art/menu1.png Resources/Art/menu4.png     Resources/Art/ubertextest.png Resources/Art/fight1.png         Resources/Art/logo.png       Resources/Art/menu2.png  Resources/Art/menu5.png Resources/Art/fight2.png      Resources/Art/menu3.png  Resources/Art/uberdone.png

