epiar_resources_audio_effectsdir = $(datadir)/epiar/Resources/Audio/Effects/
epiar_resources_audio_effects_DATA = Resources/Audio/Effects/18384__inferno__largex.wav.ogg

epiar_resources_audio_enginesdir = $(datadir)/epiar/Resources/Audio/Engines/
epiar_resources_audio_engines_DATA = Resources/Audio/Engines/22455__nathanshadow__Thruster_Level_II.ogg

epiar_resources_audio_interfacedir = $(datadir)/epiar/Resources/Audio/Interface/
epiar_resources_audio_interface_DATA = Resources/Audio/Interface/28820__junggle__btn010.ogg Resources/Audio/Interface/28853__junggle__btn043.ogg

epiar_resources_audio_musicdir = $(datadir)/epiar/Resources/Audio/Music/
epiar_resources_audio_music_DATA = Resources/Audio/Music/beyond_the_network.it Resources/Audio/Music/cyberm00n.mod

epiar_resources_audio_weaponsdir = $(datadir)/epiar/Resources/Audio/Weapons/
epiar_resources_audio_weapons_DATA = Resources/Audio/Weapons/18397__inferno__smalllas.ogg Resources/Audio/Weapons/32954__HardPCM__Chip054.wav.ogg Resources/Audio/Weapons/36847__EcoDTR__LaserRocket2.ogg Resources/Audio/Weapons/goldbeam.ogg Resources/Audio/Weapons/laser.ogg

