epiar_resources_scriptsdir = $(datadir)/epiar/Resources/Scripts/
epiar_resources_scripts_DATA = Resources/Scripts/ai.lua         Resources/Scripts/commands.lua  Resources/Scripts/fleet.lua    Resources/Scripts/missions.lua  Resources/Scripts/universe.lua Resources/Scripts/autopilot.lua  Resources/Scripts/editor.lua     Resources/Scripts/player.lua    Resources/Scripts/utilities.lua Resources/Scripts/landing.lua

