epiar_resources_skindir = $(datadir)/epiar/Resources/Skin/
epiar_resources_skin_DATA = Resources/Skin/active-tab-left.png       Resources/Skin/ui_button_pressed.png       Resources/Skin/ui_scrollbar_handle_down.png \
 Resources/Skin/active-tab-middle.png     Resources/Skin/ui_checkbox_blank.png       Resources/Skin/ui_scrollbar_handle_up.png \
 Resources/Skin/active-tab-right.png      Resources/Skin/ui_checkbox_check.png       Resources/Skin/ui_scrollbar_up.png \
 Resources/Skin/hud_bar_left.png          Resources/Skin/ui_dropdown_closed.png      Resources/Skin/ui_slider_background.png \
 Resources/Skin/hud_bar_middle.png        Resources/Skin/ui_dropdown_mouseover.png   Resources/Skin/ui_slider_bar.png \
 Resources/Skin/hud_bar_right.png         Resources/Skin/ui_dropdown_open.png        Resources/Skin/ui_slider_filled.png \
 Resources/Skin/hud_hullstr_bar.png       Resources/Skin/ui_dropdown_selected.png    Resources/Skin/ui_slider_handle.png \
 Resources/Skin/hud_hullstr_leftbar.png   Resources/Skin/ui_frame_back.png           Resources/Skin/ui_slider_left.png \
 Resources/Skin/hud_hullstr.png           Resources/Skin/ui_frame_left.png           Resources/Skin/ui_slider_right.png \
 Resources/Skin/hud_hullstr_rightbar.png  Resources/Skin/ui_frame_low_left.png       Resources/Skin/ui_textbox.png \
 Resources/Skin/hud_radarnav.png          Resources/Skin/ui_frame_low.png            Resources/Skin/ui_wnd_back.png \
 Resources/Skin/hud_shieldintegrity.png   Resources/Skin/ui_frame_low_right.png      Resources/Skin/ui_wnd_left.png \
 Resources/Skin/inactive-tab-left.png     Resources/Skin/ui_frame_right.png          Resources/Skin/ui_wnd_low_left.png \
 Resources/Skin/inactive-tab-middle.png   Resources/Skin/ui_frame_up_left.png        Resources/Skin/ui_wnd_low.png \
 Resources/Skin/inactive-tab-right.png    Resources/Skin/ui_frame_up.png             Resources/Skin/ui_wnd_low_right.png \
 Resources/Skin/ui_frame_up_right.png       Resources/Skin/ui_wnd_right.png \
 Resources/Skin/skin.xml                  Resources/Skin/ui_scrollbar_bg.png         Resources/Skin/ui_wnd_up_left.png \
 Resources/Skin/ui_button_mouseover.png   Resources/Skin/ui_scrollbar_down.png       Resources/Skin/ui_wnd_up.png \
 Resources/Skin/ui_button.png             Resources/Skin/ui_scrollbar_handle_bg.png  Resources/Skin/ui_wnd_up_right.png

